[gd_scene load_steps=12 format=3 uid="uid://cvnvllben3a4t"]

[ext_resource type="FontFile" path="res://Assets/Fonts/btnFont.tres" id="1"]
[ext_resource type="Texture2D" uid="uid://bhd135ao41ocl" path="res://Assets/Images/bg_underwater.png" id="2"]
[ext_resource type="PackedScene" path="res://Scenes/Options/Options.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://byxg1vidddqdh" path="res://Assets/Images/btn_yellow.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bafkk5ay4xpnw" path="res://Assets/Images/btn_yellow_disabled.png" id="5"]
[ext_resource type="FontFile" uid="uid://b2wbfrap8ifi4" path="res://Assets/Fonts/Marujo.ttf" id="6"]
[ext_resource type="Script" uid="uid://dr0q6sdm5pcbs" path="res://Scenes/MenuPlay/COCOSTA/Cocosta.gd" id="7"]
[ext_resource type="Texture2D" uid="uid://vg4ldcjv7m84" path="res://Assets/Images/btn_arrow.png" id="8"]
[ext_resource type="AudioStream" uid="uid://rmsb4vmss26n" path="res://Assets/Sounds/menu_play.ogg" id="9"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("6")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("6")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="Cocosta" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("7")

[node name="BgImage" type="Sprite2D" parent="."]
scale = Vector2(1, 1.29286)
texture = ExtResource("2")
centered = false

[node name="PlayerName" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -517.5
offset_right = 517.5
offset_bottom = 101.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_fonts/font = SubResource("1")
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameName" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -517.5
offset_top = -452.5
offset_right = 517.5
offset_bottom = -301.5
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_fonts/font = SubResource("1")
text = "COCOSTA"
align = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -986.0
offset_top = -136.5
offset_right = 986.0
offset_bottom = 136.5

[node name="FirstContainer" type="VBoxContainer" parent="ButtonsContainer"]
offset_right = 490.0
offset_bottom = 273.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FishContainer" type="CenterContainer" parent="ButtonsContainer/FirstContainer"]
offset_right = 490.0
offset_bottom = 273.0

[node name="BtnFish" type="TextureButton" parent="ButtonsContainer/FirstContainer/FishContainer"]
offset_right = 490.0
offset_bottom = 273.0
texture_normal = ExtResource("4")
texture_pressed = ExtResource("5")
texture_hover = ExtResource("5")
texture_disabled = ExtResource("5")
__meta__ = {
"_editor_description_": ""
}

[node name="LblFish" type="Label" parent="ButtonsContainer/FirstContainer/FishContainer"]
offset_left = 132.0
offset_top = 97.0
offset_right = 358.0
offset_bottom = 176.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_fonts/font = ExtResource("1")
text = "NIVEL 1"

[node name="SecondContainer" type="VBoxContainer" parent="ButtonsContainer"]
offset_left = 494.0
offset_right = 984.0
offset_bottom = 273.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CleanContainer" type="CenterContainer" parent="ButtonsContainer/SecondContainer"]
offset_right = 490.0
offset_bottom = 273.0

[node name="BtnClean" type="TextureButton" parent="ButtonsContainer/SecondContainer/CleanContainer"]
offset_right = 490.0
offset_bottom = 273.0
texture_normal = ExtResource("4")
texture_pressed = ExtResource("5")
texture_hover = ExtResource("5")
texture_disabled = ExtResource("5")
__meta__ = {
"_editor_description_": ""
}

[node name="LblClean" type="Label" parent="ButtonsContainer/SecondContainer/CleanContainer"]
offset_left = 70.0
offset_top = 61.0
offset_right = 420.0
offset_bottom = 211.0
custom_minimum_size = Vector2(350, 150)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_fonts/font = SubResource("4")
text = "NIVEL 2"
align = 1
valign = 1
autowrap = true

[node name="ThirdContainer" type="VBoxContainer" parent="ButtonsContainer"]
offset_left = 988.0
offset_right = 1478.0
offset_bottom = 273.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CleanContainer" type="CenterContainer" parent="ButtonsContainer/ThirdContainer"]
offset_right = 490.0
offset_bottom = 273.0

[node name="BtnThird" type="TextureButton" parent="ButtonsContainer/ThirdContainer/CleanContainer"]
offset_right = 490.0
offset_bottom = 273.0
texture_normal = ExtResource("4")
texture_pressed = ExtResource("5")
texture_hover = ExtResource("5")
texture_disabled = ExtResource("5")
__meta__ = {
"_editor_description_": ""
}

[node name="LblClean" type="Label" parent="ButtonsContainer/ThirdContainer/CleanContainer"]
offset_left = 70.0
offset_top = 61.0
offset_right = 420.0
offset_bottom = 211.0
custom_minimum_size = Vector2(350, 150)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_fonts/font = SubResource("4")
text = "NIVEL 3"
align = 1
valign = 1
autowrap = true

[node name="FourthContainer" type="VBoxContainer" parent="ButtonsContainer"]
offset_left = 1482.0
offset_right = 1972.0
offset_bottom = 273.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CleanContainer" type="CenterContainer" parent="ButtonsContainer/FourthContainer"]
offset_right = 490.0
offset_bottom = 273.0

[node name="BtnFourth" type="TextureButton" parent="ButtonsContainer/FourthContainer/CleanContainer"]
offset_right = 490.0
offset_bottom = 273.0
texture_normal = ExtResource("4")
texture_pressed = ExtResource("5")
texture_hover = ExtResource("5")
texture_disabled = ExtResource("5")
__meta__ = {
"_editor_description_": ""
}

[node name="LblClean" type="Label" parent="ButtonsContainer/FourthContainer/CleanContainer"]
offset_left = 70.0
offset_top = 61.0
offset_right = 420.0
offset_bottom = 211.0
custom_minimum_size = Vector2(350, 150)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_fonts/font = SubResource("4")
text = "NIVEL 4"
align = 1
valign = 1
autowrap = true

[node name="BtnBack" type="TextureButton" parent="."]
offset_right = 255.0
offset_bottom = 273.0
texture_normal = ExtResource("8")

[node name="Options" parent="." instance=ExtResource("3")]

[node name="BGSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9")
autoplay = true

[connection signal="pressed" from="ButtonsContainer/FirstContainer/FishContainer/BtnFish" to="." method="_on_BtnFish_pressed"]
[connection signal="pressed" from="ButtonsContainer/SecondContainer/CleanContainer/BtnClean" to="." method="_on_BtnClean_pressed"]
[connection signal="pressed" from="ButtonsContainer/ThirdContainer/CleanContainer/BtnThird" to="." method="_on_BtnThird_pressed"]
[connection signal="pressed" from="ButtonsContainer/FourthContainer/CleanContainer/BtnFourth" to="." method="_on_BtnFourth_pressed"]
[connection signal="pressed" from="BtnBack" to="." method="_on_BtnBack_pressed"]
